--- a/style.css
+++ b/style.css
@@ -13,16 +13,25 @@ body {
     background: #7fc469;
     color: #565e6b;
 }
-.search{
+
+.search {
     width: 500px;
-   height: 50px;
-   border: 1px solid #ebedec;
+    height: 50px;
+    border: 1px solid #ebedec;
 }
+
+.app {
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .wrapper {
-    width: 500px;
-    height: 100%;
+    width: 40%;
+    height: 100vh;
     background: #fff;
-    margin: 15px 0;
+    border: 1px solid #ebedec;
+    float: left;
+
 }
 
 .wrapper .title {
@@ -32,6 +41,7 @@ body {
     font-weight: 700;
     border-bottom: 1px solid #ebedec;
 }
+
 
 .wrapper .tabs_wrap ul li {
     width: 135px;
@@ -80,3 +90,27 @@ body {
     margin-top: 3px;
 }
 
+.wrapper-right {
+    width: 40%;
+    height: 100vh;
+    background: #fff;
+    border: 1px solid #ebedec;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
+.wrapper-right .title {
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    border-bottom: 1px solid #ebedec;
+}
+
+.cart-row {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 10%;
+    background: #fff;
+}
